# openpancan

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  Makefile  README.md  README_zh.md
docs/database/: current-configuration.md  integration-guide.md  tasks.md
docs/design/: architecture.md
docs/gene-base/: README.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md
docs/gene-base/design/: README.md
docs/gene-base/dev/: README.md
docs/gene-base/spec/: README.md
docs/gene-base/tasks/: README.md
docs/testing/: test-plan.md
doctor/: main.py  pyproject.toml
gateway/: pyproject.toml
gateway/src/gateway/: main.py
modules/PanCancerSystem/: pyproject.toml
modules/PanCancerSystem/backend/: check.py  config.py  main.py  run.py
modules/PanCancerSystem/backend/api/: acmg.py  amp_asco_cap.py  chat.py  germline_variants.py  health.py  patients.py  report.py  settings.py  somatic_variants.py  treatment.py  trials.py  variants.py
modules/PanCancerSystem/backend/database/: models.py  session.py
modules/PanCancerSystem/backend/services/: clinicaltrials_client.py
modules/PanCancerSystem/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  nginx.conf  supervisord.conf  supervisord.dev.conf
modules/PanCancerSystem/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
modules/PanCancerSystem/frontend/src/: App.tsx  index.css
modules/PanCancerSystem/frontend/src/components/: BiomarkerPanel.tsx  GeneCard.tsx  TumorProfile.tsx
modules/PanCancerSystem/frontend/src/i18n/: index.ts
modules/PanCancerSystem/frontend/src/pages/: Dashboard.tsx  PatientDetail.tsx  PatientList.tsx  PipelineRun.tsx  ReportView.tsx  Settings.tsx  VariantBrowser.tsx
modules/PanCancerSystem/frontend/src/services/: api.ts
modules/PanCancerSystem/frontend/src/store/: index.ts
modules/PanCancerSystem/frontend/src/types/: index.ts
modules/phenotype_rag/: pyproject.toml
modules/phenotype_rag/src/phenotype_rag/: __init__.py  cancer_prompts.json  config.py  pipeline.py  schemas.py  server.py
modules/phenotype_score/: pyproject.toml
modules/phenotype_score/src/phenotype_score/: api.py  cancer_scoring.py  config.py  schemas.py
modules/ppi_score/: pyproject.toml
modules/ppi_score/src/ppi_score/: api.py  cancer_ppi.py  config.py  schemas.py
modules/report/: pyproject.toml
modules/report/src/report/api/: main.py  schemas.py  service.py
modules/report/src/report/report/: clinical_trials.py  drug_recommendations.py
modules/variant_rank/: pyproject.toml
modules/variant_rank/src/variant_rank/: api.py  cancer_driver_rank.py  config.py  dataio.py  schemas.py  somatic_scoring.py
modules/vep_service/: pyproject.toml
modules/vep_service/src/vep_service/: __init__.py  api.py  cancer_annotation.py  config.py  schemas.py  vep_runner.py
pipeline/: main.py  pyproject.toml  runner.py
scripts/: load-env.sh  start_full_pipeline_api.sh
tests/: pyproject.toml
tests/unit/: test_clinicaltrials.py
