[project]
name = "openpancan-gateway"
version = "0.1.0"
description = "OpenPanCan Gateway Orchestrator - routes requests to pancreatic cancer analysis modules"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
