[project]
name = "openpancan-tests"
version = "0.1.0"
description = "OpenPanCan test suite"
requires-python = ">=3.12"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
