[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pancancer-system"
version = "0.1.0"
description = "OpenPanCan pancreatic cancer patient management and clinical analysis web application"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpenPanCan Team" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
pancancer-system = "backend.run:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
