[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppi-score"
version = "0.1.0"
description = "OpenPanCan PPI scoring module – scores genes by cancer pathway PPI network analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpenPanCan Team" },
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
ppi-score-server = "ppi_score.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ppi_score"]

[tool.ruff]
target-version = "py312"
line-length = 100
