[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "report"
version = "0.1.0"
description = "OpenPanCan Report module – generates pancreatic cancer genomic reports with SSE streaming"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpenPanCan Team" },
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=1.8",
    "pydantic>=2",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
report-server = "report.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/report"]

[tool.ruff]
target-version = "py312"
line-length = 100
