[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "variant-rank"
version = "0.1.0"
description = "OpenPanCan cancer driver mutation ranking module for pancreatic cancer genomic analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpenPanCan Team" },
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2",
    "pandas>=2.2",
    "polars>=0.20",
    "duckdb>=0.10",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
variant-rank-server = "variant_rank.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/variant_rank"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
