[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vep-service"
version = "0.1.0"
description = "OpenPanCan VEP annotation service for pancreatic cancer genomic analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpenPanCan Team" },
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pysam>=0.22",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
vep-service = "vep_service.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vep_service"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
